UI: Fix language icons not showing in dropdown (regression) - fixes #2279
rn=

(integrated from the KomodoIDE master branch change 4330864 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/4330864

--- a/src/chrome/komodo/skin/global/components/languages.less
+++ b/src/chrome/komodo/skin/global/components/languages.less
@@ -145,5 +145,6 @@ toolbarbutton[anonid="statusbar-language-menu"]
   .menu-iconic-left > image
   {
     visibility: visible !important;
+    display: block !important;
   }
 }
